test/functions/deitz/test_write_type_error.good
test_write_type_error.chpl:2: error: unresolved call 'writeln(type int)'
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note: candidates are: channel.writeln()
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note:                 channel.writeln(args ...?k)
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note:                 channel.writeln(args ...?k, onErr: ErrorHandler)
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note:                 channel.writeln(args ...?k, style: iostyle, onErr: ErrorHandler = nil)
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note:                 writeln(args ...?n)
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note:                 writeln()
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note:                 Writer.writeln(args ...?k)
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note:                 Writer.writeln()
